# DeepRefine-Skill

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  SKILL.md  pyproject.toml
deeprefine_skill/: SKILL_COPILOT.md  action_review.py  agent_graph.py  cli.py  installers.py  refine_runner.py
deeprefine_skill/codex_skill/: SKILL.md
deeprefine_skill/codex_skill/agents/: openai.yaml
deeprefine_skill/codex_skill/references/: llm-prompts.md  reafiner-workflow.md  trace-and-commands.md
docs/: codex.md  copilot-cli.md
