[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deeprefine-cli"
version = "0.1.9"
description = "CLI and agent skills (Cursor, Copilot CLI, Gemini CLI, Codex) to refine graphify knowledge graphs with DeepRefine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "HKUST-KnowComp"},
]
keywords = ["deeprefine", "graphify", "knowledge-graph", "rag", "cursor", "copilot", "copilot-cli", "gemini-cli", "gemini", "codex", "agent-skill"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0",
]

[project.urls]
Homepage = "https://github.com/HKUST-KnowComp/DeepRefine-Skill"
Documentation = "https://github.com/HKUST-KnowComp/DeepRefine-Skill#readme"
Repository = "https://github.com/HKUST-KnowComp/DeepRefine-Skill"
Issues = "https://github.com/HKUST-KnowComp/DeepRefine-Skill/issues"

[project.scripts]
deeprefine = "deeprefine_skill.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deeprefine_skill*"]

[tool.setuptools.package-data]
deeprefine_skill = [
    "SKILL.md",
    "SKILL_COPILOT.md",
    "codex_skill/SKILL.md",
    "codex_skill/agents/openai.yaml",
    "codex_skill/references/*.md",
    "gemini_extension/gemini-extension.json",
    "gemini_extension/GEMINI.md",
    "gemini_extension/commands/*.toml",
    "gemini_extension/commands/deeprefine/*.toml",
    "gemini_extension/skills/deeprefine/SKILL.md",
]
